--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://deveb2020.github.io",
+  "homepage": "http://deveb2020.github.io/Landing_Page_Formations",
   "name": "google-sheet",
   "version": "0.1.0",
   "private": true,
